[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Pause.gd" type="Script" id=1]
[ext_resource path="res://assets/sounds/menu/Click.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/sounds/menu/Focus.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/ui/fonts/button_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/ui/Button/Button.tscn" type="PackedScene" id=5]

[node name="Pause" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.352941 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.4
anchor_right = 0.5
anchor_bottom = 0.4
margin_left = -47.0
margin_top = -13.0
margin_right = 47.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 4 )
text = "PAUSED"
align = 1
valign = 1

[node name="ReturnButton" parent="." instance=ExtResource( 5 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -85.0
margin_top = -20.5
margin_right = 85.0
margin_bottom = 20.5

[node name="Label" type="Label" parent="ReturnButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.5
margin_top = -15.0
margin_right = 38.5
margin_bottom = 13.0
custom_fonts/font = ExtResource( 4 )
text = "Return"
align = 1
valign = 1

[node name="MenuButton" parent="." instance=ExtResource( 5 )]
anchor_left = 0.5
anchor_top = 0.6
anchor_right = 0.5
anchor_bottom = 0.6
margin_left = -85.0
margin_top = -20.5
margin_right = 85.0
margin_bottom = 20.5

[node name="Label" type="Label" parent="MenuButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -61.5
margin_top = -15.0
margin_right = 61.5
margin_bottom = 13.0
custom_fonts/font = ExtResource( 4 )
text = "Main Menu"
align = 1
valign = 1

[node name="FocusAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "SoundEffects"

[node name="ClickAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "SoundEffects"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="focus_exited" from="ReturnButton" to="." method="_on_Button_focus_exited"]
[connection signal="pressed" from="ReturnButton" to="." method="_on_ReturnButton_pressed"]
[connection signal="focus_exited" from="MenuButton" to="." method="_on_Button_focus_exited"]
[connection signal="pressed" from="MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
